# ubitrack_templates

basic_component/: CMakeLists.txt  README.md  conanfile.py
basic_component/doc/utql/Example/: BasicComponent.xml
basic_component/example/conan/: conanfile.py
basic_component/src/basic_component/: BasicComponent.cpp  CMakeLists.txt
module_component/: CMakeLists.txt  conanfile.py
module_component/doc/utql/Example/: ModuleComponent.xml
module_component/src/module_component/: CMakeLists.txt  ModuleComponent.cpp
trigger_component/: CMakeLists.txt  conanfile.py
trigger_component/doc/utql/Example/: TriggerComponent.xml
trigger_component/src/trigger_component/: CMakeLists.txt  TriggerComponent.cpp
